Изменил структуру scss и css файлов

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -14,10 +14,14 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "css/base",
       "css",
+      "css/utils",
       "css/sections",
-      "css/utils"
+      "css/base",
+      "scss",
+      "scss/sections",
+      "scss/utils",
+      "scss/base"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -40,14 +44,13 @@
     }
   ],
   "projectView": {
-    "selectedView": "settings"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
     "watchedExtensions": [
       "less",
       "sass",
-      "scss",
       "styl",
       "md",
       "markdown",
@@ -66,7 +69,8 @@
       "css",
       "html",
       "htm",
-      "php"
+      "php",
+      "scss"
     ]
   },
   "pathFilters": [
