--- a/prepros-6.config
+++ b/prepros-6.config
@@ -4,24 +4,18 @@
   "exportConfig": true,
   "fileConfigs": [
     {
-      "path": "css/utils/variables.scss",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+      "path": "css/main.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     },
     {
-      "path": "css/sections/intro.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+      "path": "scss/main.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
       "css",
-      "css/utils",
-      "css/sections",
-      "css/base",
-      "scss",
-      "scss/sections",
-      "scss/utils",
-      "scss/base"
+      "scss"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -41,6 +35,19 @@
       "imports": [
         "css/utils/variables.scss"
       ]
+    },
+    {
+      "path": "scss/main.scss",
+      "imports": [
+        "css/normalize.css",
+        "scss/utils/variables.scss",
+        "scss/base/base.scss",
+        "scss/base/fonts.scss",
+        "scss/sections/intro.scss",
+        "scss/sections/features.scss",
+        "scss/sections/reviews.scss",
+        "scss/sections/buy.scss"
+      ]
     }
   ],
   "projectView": {
@@ -51,6 +58,7 @@
     "watchedExtensions": [
       "less",
       "sass",
+      "scss",
       "styl",
       "md",
       "markdown",
@@ -69,8 +77,7 @@
       "css",
       "html",
       "htm",
-      "php",
-      "scss"
+      "php"
     ]
   },
   "pathFilters": [
@@ -85,7 +92,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7879,
+    "port": 7880,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
